WIP, tests now passing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         integrity="sha512-M7nHCiNUOwFt6Us3r8alutZLm9qMt4s9951uo8jqO4UwJ1hziseL6O3ndFyigx6+LREfZqnhHxYjKRJ8ZQ69DQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <!-- Topojson -->
+    <script src="https://unpkg.com/topojson@3"></script>
+
+
 </head>
 
 <body>
