--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>United States Educational Attainment</title>
 
     <link href="./styles.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div id="chart-container"></div>
 
     <!-- D3 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"
@@ -16,12 +20,7 @@
     <!-- Topojson -->
     <script src="https://unpkg.com/topojson@3"></script>
 
-
-</head>
-
-<body>
-    <div id="chart-container"></div>
-
+    <!-- Custom JavaScript -->
     <script src="./toolTip.js"></script>
     <script src="./choroplethMapPlotter.js"></script>
     <script src="./index.js"></script>
